# AII

./: .gitignore  CMakeLists.txt  README
src/: main.cpp
src/ui/: mainwindow.cpp  mainwindow.h
